--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
     },
     "content_scripts": [
         {
-            "matches": ["<all_urls>"],
+            "matches": ["https://*.hooman.design/desk*", "http://*/desk*"],
             "css": ["sidebar/sidebar.css"],
             "js": ["lib/jquery-3.6.0.js", "sidebar/sidebar.js", "sidebar/createSidebar.js"]
         }
